# Video_App

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mediamtx.yml  pyproject.toml
aliases/: cam1  cam2
scripts/: run_folder_on_demand.sh
src/backend/: main.py
