[project]
name = "backend"
version ="0.1.0"
description = ""
authors = [
    {name = "Vince Ong" , email = "vinceong2001@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11"
dependencies =[
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include ="backend", from ="src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.mansonry.api"